--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,119 +6,159 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
+    <ScrollView
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:title="@string/app_name" />
+        app:layout_constraintVertical_bias="0.0">
 
-    <ImageView
-        android:id="@+id/ivNight"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        app:layout_constraintBottom_toBottomOf="@+id/tvChoice"
-        app:layout_constraintStart_toEndOf="@+id/tvChoice"
-        app:layout_constraintTop_toTopOf="@+id/tvChoice"
-        app:srcCompat="@drawable/baseline_brightness_3_24" />
 
-    <ImageView
-        android:id="@+id/ivDay"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        app:layout_constraintBottom_toBottomOf="@+id/tvChoice"
-        app:layout_constraintEnd_toStartOf="@+id/tvChoice"
-        app:layout_constraintTop_toTopOf="@+id/tvChoice"
-        app:srcCompat="@drawable/baseline_wb_sunny_24" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/tvChoice"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="Choose Between Day or Night Theme:"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:background="?attr/colorPrimary"
+                android:minHeight="?attr/actionBarSize"
+                android:paddingStart="10dp"
+                android:theme="?attr/actionBarTheme"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:title="@string/app_name" />
 
-    <TextView
-        android:id="@+id/tvAppInfo"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="50dp"
-        android:padding="4dp"
-        android:text="Text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvChoice" />
+            <ImageView
+                android:id="@+id/ivNight"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                app:layout_constraintBottom_toBottomOf="@+id/tvChoice"
+                app:layout_constraintStart_toEndOf="@+id/tvChoice"
+                app:layout_constraintTop_toTopOf="@+id/tvChoice"
+                app:srcCompat="@drawable/baseline_brightness_3_24" />
 
-    <Button
-        android:id="@+id/btBlue"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="32dp"
-        android:text="Blue Theme"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvAppInfo" />
+            <ImageView
+                android:id="@+id/ivDay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintBottom_toBottomOf="@+id/tvChoice"
+                app:layout_constraintEnd_toStartOf="@+id/tvChoice"
+                app:layout_constraintTop_toTopOf="@+id/tvChoice"
+                app:srcCompat="@drawable/baseline_wb_sunny_24" />
 
-    <Button
-        android:id="@+id/btRed"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Red Theme"
-        app:layout_constraintEnd_toEndOf="@+id/btDefault"
-        app:layout_constraintStart_toStartOf="@+id/btDefault"
-        app:layout_constraintTop_toBottomOf="@+id/btDefault" />
+            <TextView
+                android:id="@+id/tvChoice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:text="Choose Between Day or Night Theme:"
+                app:layout_constraintEnd_toEndOf="@+id/tvAppInfo"
+                app:layout_constraintStart_toStartOf="@+id/tvAppInfo"
+                app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
-    <Button
-        android:id="@+id/btPurple"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Purple Theme"
-        app:layout_constraintEnd_toEndOf="@+id/btGreen"
-        app:layout_constraintStart_toStartOf="@+id/btGreen"
-        app:layout_constraintTop_toBottomOf="@+id/btGreen" />
+            <TextView
+                android:id="@+id/tvAppInfo"
+                android:layout_width="312dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                android:padding="4dp"
+                android:text="Text"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvChoice" />
 
-    <Button
-        android:id="@+id/btYellow"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Yellow Theme"
-        app:layout_constraintEnd_toEndOf="@+id/btRed"
-        app:layout_constraintStart_toStartOf="@+id/btRed"
-        app:layout_constraintTop_toBottomOf="@+id/btRed" />
+            <Button
+                android:id="@+id/btBlue"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="32dp"
+                android:text="Blue Theme"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/btDefault"
+                app:layout_constraintTop_toBottomOf="@+id/tvAppInfo" />
 
-    <Button
-        android:id="@+id/btGreen"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Green Theme"
-        app:layout_constraintEnd_toEndOf="@+id/btBlue"
-        app:layout_constraintStart_toStartOf="@+id/btBlue"
-        app:layout_constraintTop_toBottomOf="@+id/btBlue" />
+            <Button
+                android:id="@+id/btRed"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="Red Theme"
+                app:layout_constraintEnd_toEndOf="@+id/btDefault"
+                app:layout_constraintStart_toStartOf="@+id/btDefault"
+                app:layout_constraintTop_toBottomOf="@+id/btDefault" />
 
-    <Button
-        android:id="@+id/btDefault"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
-        android:text="Default Theme"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvAppInfo" />
+            <Button
+                android:id="@+id/btPurple"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="Purple Theme"
+                app:layout_constraintEnd_toEndOf="@+id/btGreen"
+                app:layout_constraintStart_toStartOf="@+id/btGreen"
+                app:layout_constraintTop_toBottomOf="@+id/btGreen" />
+
+            <Button
+                android:id="@+id/btYellow"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="Yellow Theme"
+                app:layout_constraintEnd_toEndOf="@+id/btRed"
+                app:layout_constraintStart_toStartOf="@+id/btRed"
+                app:layout_constraintTop_toBottomOf="@+id/btRed" />
+
+            <Button
+                android:id="@+id/btGreen"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="Green Theme"
+                app:layout_constraintEnd_toEndOf="@+id/btBlue"
+                app:layout_constraintStart_toStartOf="@+id/btBlue"
+                app:layout_constraintTop_toBottomOf="@+id/btBlue" />
+
+            <Button
+                android:id="@+id/btDefault"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="16dp"
+                android:text="Default Theme"
+                app:layout_constraintEnd_toStartOf="@+id/btBlue"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintHorizontal_chainStyle="packed"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvAppInfo" />
+
+            <Switch
+                android:id="@+id/switch1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:layout_marginBottom="50dp"
+                android:padding="2dp"
+                android:switchPadding="5dp"
+                android:text="DayTheme"
+                android:thumb="@drawable/thumb"
+                android:track="@drawable/track"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btPurple" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
